<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F1F1F1"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingTop="60dp"
        android:paddingRight="30dp"
        android:paddingBottom="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textBemVindo"
            android:textAlignment="center"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="317dp"
            android:layout_height="140dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/pizza_planet" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/textEscolhaSabor"
            android:textAlignment="center"
            android:textSize="18dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="175dp"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal|center_vertical"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:scaleType="centerInside"
                        app:srcCompat="@drawable/mussarela" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/textPizza1"
                        android:textAlignment="center"
                        android:textSize="16dp" />

                    <EditText
                        android:id="@+id/inputQuantidade1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:gravity="bottom|center_horizontal"
                        android:hint="@string/inputQuantidade"
                        android:inputType="number"
                        android:textAlignment="center" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="175dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:scaleType="centerInside"
                        app:srcCompat="@drawable/peito_de_peru" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/textPizza2"
                        android:textAlignment="center"
                        android:textSize="16dp" />

                    <EditText
                        android:id="@+id/inputQuantidade2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:gravity="bottom|center_horizontal"
                        android:hint="@string/inputQuantidade"
                        android:inputType="number"
                        android:textAlignment="center" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="175dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:scaleType="centerInside"
                        app:srcCompat="@drawable/pepperoni" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/textPizza3"
                        android:textAlignment="center"
                        android:textSize="16dp" />

                    <EditText
                        android:id="@+id/inputQuantidade3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:gravity="bottom|center_horizontal"
                        android:hint="@string/inputQuantidade"
                        android:inputType="number"
                        android:textAlignment="center" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="175dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:scaleType="centerInside"
                        app:srcCompat="@drawable/portuguesa" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/textPizza4"
                        android:textAlignment="center"
                        android:textSize="16dp" />

                    <EditText
                        android:id="@+id/inputQuantidade4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:gravity="bottom|center_horizontal"
                        android:hint="@string/inputQuantidade"
                        android:inputType="number"
                        android:textAlignment="center" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="29dp" />

        <Button
            android:id="@+id/btnFazerPedido"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:background="#D80000"
            android:onClick="fazerPedido"
            android:text="@string/buttonFazerPedido"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>